--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     <footer class="centrer">
             <aside class="centrer" >
                 <p id="pub">Publicité</p><!--publicité-->
-                <img src="../img/nordvpn pub.jpg" target="_blank" width="15%" class="pub" alt="publicité nordvpn">
-                <img src="../img/raid pub.jpg" target="_blank" width="25%" class="pub" alt="publicité raid shadow legend">
-                <img src="../img/pub_burger_king.png" target="_blank" width="22%" class="pub" alt="publicité burger king">
-                <img src="../img/coca-cola-logo-1.webp" target="_blank" width="25%" class="pub" alt="publicité coca cola">
+                <img src="./img/nordvpn pub" target="_blank" width="15%" class="pub" alt="publicité nordvpn">
+                <img src="./img/raid pub.jpg" target="_blank" width="25%" class="pub" alt="publicité raid shadow legend">
+                <img src="./img/pub_burger_king.png" target="_blank" width="22%" class="pub" alt="publicité burger king">
+                <img src="./img/coca-cola-logo-1.webp" target="_blank" width="25%" class="pub" alt="publicité coca cola">
             </aside>
     </footer>
 </html>
