--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <h3>Les articles récent:</h3>
         <div>
             <h4>Les meilleurs moments de bmx freestyle &nbsp/&nbsp Venez découvrir le nouveau jeu inazuma eleven</h4>
-            <img class="gauche" src="../img/bmx_freestyle.jpg" width="25%" alt="bmx freestyle" >
-        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="../img/inazuma_eleven.jpg" width="25%" alt="photo nouvelle mayonnaise"><br>
+            <img class="gauche" src="./img/bmx_freestyle.jpg" width="25%" alt="bmx freestyle" >
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="./img/inazuma_eleven.jpg" width="25%" alt="photo nouvelle mayonnaise"><br>
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="" target="_blank">en savoir plus sur le bmx freestyle</a>
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="file:///C:/Users/lucas/OneDrive/Documents/supinfo%20html/article/article3.html" target="_blank">Venez découvrir le nouveau jeu Inazuma Eleven</a>
         </div>
@@ -89,7 +89,7 @@
     <footer class="centrer">
             <aside class="centrer" >
                 <p id="pub">Publicité</p><!--publicité-->
-                <img src="./img/nordvpn pub" target="_blank" width="15%" class="pub" alt="publicité nordvpn">
+                <img src="./img/nordvpn pub.jpg" target="_blank" width="15%" class="pub" alt="publicité nordvpn">
                 <img src="./img/raid pub.jpg" target="_blank" width="25%" class="pub" alt="publicité raid shadow legend">
                 <img src="./img/pub_burger_king.png" target="_blank" width="22%" class="pub" alt="publicité burger king">
                 <img src="./img/coca-cola-logo-1.webp" target="_blank" width="25%" class="pub" alt="publicité coca cola">
